# Hybrid_Comm_Archi_ARTERY_SimuLTE

./: .gitignore  .qtenvrc  BaseCommMode.cc  BaseCommMode.h  BaseCommMode.ned  BaseProtocol.cc  BaseProtocol.h  BaseProtocol.ned  CMakeLists.txt  CTestTestfile.cmake  CollabCommMode.cc  CollabCommMode.h  CollabCommMode.ned  DupCommMode.cc  DupCommMode.h  DupCommMode.ned  HybridApp.cc  HybridApp.h  HybridApp.ned  HybridService.cc  HybridService.h  HybridService.ned  HybridServicesMessages.msg  HybridServicesMessagesLTE.msg  Hybrid_communication.anf  ItsG5App.cc  ItsG5App.h  ItsG5App.ned  LteApp.cc  LteApp.h  LteApp.ned  Makefile  README.md  SingleCommMode.cc  SingleCommMode.h  SingleCommMode.ned  SubApplication.cc  SubApplication.h  SubApplication.ned  cmake_install.cmake  (+20 more)
Managment/: Managment.cc  Managment.h  Managmnent.ned
RLAgentSrc/: Memory.h  Network.h
RLAgentUtils/: Agent.cc  Agent.h  Env.cc  Env.h  Memory.h  Network.h
RL_python/: main.py
What to add else/src/artery/: CMakeLists.txt
What to add else/src/artery/lte/: Car.ned
platooningService/: HybridService.h  HybridService.ned
results/: General-#0.vci  General-#0.vec  Hybrid_communication-#0.sca  Hybrid_communication-#0.vci  Hybrid_communication-#0.vec
results/game one/: additionalinfo.txt
seeThroughService/: HybridService.cc  HybridService.h  HybridService.ned
sumo_network/: highway-hybrid.net.xml  highway-hybrid.rou.xml  highway-hybrid.sumocfg
sumo_network_circle/: circle.add.xml  highway-hybrid.net.xml  highway-hybrid.rou.xml  highway-hybrid.sumocfg
tmp/: DDQN.py
(+3 files in other folders)
